--- a/helm/greenthumb/values.yaml
+++ b/helm/greenthumb/values.yaml
@@ -2,11 +2,10 @@
 replicaCount: 3
 
 image:
-  repository: ghcr.io/4min4m/greenthumb
+  repository: amin4m/greenthumb
   pullPolicy: IfNotPresent
   tag: "latest"
 
-imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
