--- a/helm/greenthumb/values.yaml
+++ b/helm/greenthumb/values.yaml
@@ -40,16 +40,12 @@ ingress:
   className: "nginx"
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
-    cert-manager.io/cluster-issuer: "letsencrypt-prod"
   hosts:
     - host: greenthumb.local
       paths:
         - path: /
           pathType: Prefix
-  tls:
-    - secretName: greenthumb-tls
-      hosts:
-        - greenthumb.local
+  tls: []
 
 resources:
   limits:
