--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,18 @@
+# Run on port 8080 (non-privileged port)
 server {
-    listen 80;
+    listen 8080;
     server_name localhost;
     root /usr/share/nginx/html;
     index index.html;
 
-    # Use temp directory that nginx user can write to
+    # Use directories writable by non-root user
+    access_log /tmp/nginx/access.log;
+    error_log /tmp/nginx/error.log;
+    
+    # Set PID file to writable location
+    pid /tmp/nginx/nginx.pid;
+
+    # Client body temp path
     client_body_temp_path /tmp/nginx/client_temp;
     proxy_temp_path /tmp/nginx/proxy_temp;
     fastcgi_temp_path /tmp/nginx/fastcgi_temp;
